deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: javadep
  name: javadep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: javadep
  strategy: {}
  template:
    metadata:
      labels:
        app: javadep
    spec:
      containers:
      - image: khatanve/webapp-demo
        name: javadep
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: javadep-svc
spec:
  type: NodePort
  selector:
    app: javadep
  ports:
  - port: 80
    targetPort: 8080
    #nodePort: 30083
